fixed publishing bug && mobile overflow-x

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,11 @@ code {
     monospace;
 }
 
+#root {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 .anchor {
   display: block;
   position: relative;
